[package]
name        = "mineral-test"
description = "Mineral 内部测试辅助:共享 fixture / 快照断言宏 / proptest 生成器"
publish     = false
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
mineral-channel-core = { workspace = true }
mineral-model        = { workspace = true }

async-trait = { workspace = true }
color-eyre  = { workspace = true }
proptest    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
url         = { workspace = true }

[lints]
workspace = true
