[package]
name = "mineral-tui"
version = "0.1.0"
edition = "2021"

[features]
mock = [
    "dep:mineral-channel-mock",
    "mineral-channel-mock/mock",
    "mineral-model/mock",
]

[dependencies]
color-eyre           = { workspace = true }
crossterm            = { workspace = true }
image                = { workspace = true }
mineral-audio        = { workspace = true }
mineral-channel-core = { workspace = true }
mineral-spectrum     = { workspace = true }
mineral-channel-mock = { workspace = true, optional = true }
mineral-log          = { workspace = true }
mineral-macros       = { workspace = true }
mineral-model        = { workspace = true }
mineral-task         = { workspace = true }
rand                 = { workspace = true }
ratatui              = { workspace = true }
ratatui-image        = { workspace = true }
rustc-hash           = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
tokio                = { workspace = true }

[lints]
workspace = true
