[package]
name        = "mineral-tui"
description = "Mineral 的 ratatui TUI 前端"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
mock = [
    "dep:mineral-channel-mock",
    "mineral-channel-mock/mock",
    "mineral-model/mock",
]

[dependencies]
arboard              = { workspace = true }
color-eyre           = { workspace = true }
crossterm            = { workspace = true }
futures-util         = { workspace = true }
image                = { workspace = true }
isahc                = { workspace = true }
kmeans_colors        = { workspace = true }
palette              = { workspace = true }
parking_lot          = { workspace = true }
mineral-audio        = { workspace = true }
mineral-channel-core = { workspace = true }
mineral-config       = { workspace = true }
mineral-spectrum     = { workspace = true }
mineral-channel-mock = { workspace = true, optional = true }
mineral-log          = { workspace = true }
mineral-macros       = { workspace = true }
mineral-model        = { workspace = true }
mineral-paths        = { workspace = true }
mineral-persist      = { workspace = true }
mineral-protocol     = { workspace = true }
mineral-server       = { workspace = true }
mineral-task         = { workspace = true }
nix                  = { workspace = true }
rand                 = { workspace = true }
ratatui              = { workspace = true }
ratatui-image        = { workspace = true }
rustc-hash           = { workspace = true }
unicode-width        = { workspace = true }
nucleo-matcher       = { workspace = true }
pinyin               = { workspace = true }
smallvec             = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
time                 = { workspace = true }
tokio                = { workspace = true }
url                  = { workspace = true }

[dev-dependencies]
insta              = { workspace = true }
tempfile           = "3"
mineral-test       = { workspace = true }
proptest           = { workspace = true }
pretty_assertions  = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
