[package]
name        = "mineral"
description = "多源终端音乐播放器(ratatui),支持本地与云端音乐"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[features]
mock = ["mineral-tui/mock", "dep:mineral-channel-mock"]

[dependencies]
clap                    = { workspace = true }
color-eyre              = { workspace = true }
mineral-channel-core    = { workspace = true }
mineral-channel-mock    = { workspace = true, optional = true }
mineral-channel-netease = { workspace = true }
mineral-channel-bilibili = { workspace = true }
mineral-cli             = { workspace = true }
mineral-config          = { workspace = true }
mineral-log             = { workspace = true }
mineral-paths           = { workspace = true }
mineral-persist         = { workspace = true }
mineral-script          = { workspace = true }
mineral-server          = { workspace = true }
mineral-tui             = { workspace = true }
tokio                   = { workspace = true }

# macOS daemon 需在主线程养 NSApplication + run loop(系统媒体中心收录与命令派发的前提),
# 故 binary 直接持有媒体 crate 的主线程入口;tokio 挪到后台线程。
[target.'cfg(target_os = "macos")'.dependencies]
mineral-media = { workspace = true }

[dev-dependencies]
nix              = { workspace = true }
assert_cmd       = { workspace = true }
predicates       = { workspace = true }
mineral-model    = { workspace = true }
mineral-protocol = { workspace = true }
tokio            = { workspace = true }

[lints]
workspace = true
