[package]
name        = "mineral-channel-core"
description = "MusicChannel trait + 共享错误 / 类型"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
mineral-model = { workspace = true }
async-trait   = { workspace = true }
thiserror     = { workspace = true }
color-eyre    = { workspace = true }
rustc-hash    = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }

[lints]
workspace = true
